# Android-Basic

./: 001_CustomView.md  001_自定义View.md  002_ViewPager.md  004_ViewAnimation.md  005_01_Android编程权威指南笔记一.md  005_02_Android编程权威指南笔记二.md  005_Android编程权威指南笔记一.md  006_TextView.md  007_Activity.md  009_[Raywenderlich]Android Custom View Tutorial.md  010_Android SDK版本与兼容.md  011_01_Fragment基础.md  011_02_Fragment深入.md  011_Fragment.md  011_Fragment基础.md  013_ConstraintLayout.md  014_dp、sp 以及屏幕像素密度.md  015_样式、主题及主题属性.md  018_格式化字符串.md  019_文件路径.md  020_ FileProvider.md  README.md
Android Background Process/: 001_WorkManager简介.md  002_Handler.md  003_AsyncTask例子.md  004_AlarmManager.md  README.md
Animation/: 001_视图动画.md  002_代码实现视图动画.md  003_插值器.md  004_逐帧动画.md  005_ObjectAnimator.md  005_ValueAnimator.md  005_X01_弹跳加载中效果.md  006_ObjectAnimator.md  007_AnimatorSet.md  008_AnimatorSet实现路径动画.md  009_Animator的XML实现.md  010_PropertyValuesHolder.md  012_ViewPropertyAnimator.md  013_Activity转场动画.md  README.md
Audio/: 001_UAMP.md  README.md
BlueTooth/: 000_000_蓝牙开发资源.md  000_001_蓝牙权限.md  000_002_开启、关闭蓝牙及状态监听.md  000_003_ BluetoothAdapter.md  000_BLE4.0简介.md  001_蓝牙基础知识.md  002_Android蓝牙源码一.md  README.md  蓝牙基础知识.md
Camera/: 000_001_调用相机拍照.md  000_002_调用相机录制视频.md  001_001_Camera2 API.md  001_001_Camera2 API使用.md  001_001_Camera2Basic.md  001_002_JPEG图片的方向.md  001_002_屏幕方向监听.md  001_Camera2实现拍照录像.md  002_OpenGL实现相机知识点.md  003_001_Camera2Basic.md  README.md
Coroutine/: CoroutineContext.md  README.md
Database&Cache/: 001_OrmLite.md  002_LruCache.md  003_OrmLite使用.md  004_SharedPreferences.md  005_内部存储和外部存储.md  006_Android原生SQLite操作.md  007_GreenDao.md
Flutter/: 001_ListTile.md  002_SizedBox.md  003_AspectRatio.md  004_Stack.md  005_AppBar.md  006_Layout官方例子.md  007_官方组件state管理说明.md  008_ListView.md  009_Divider.md  README.md
Framework/: 000_001_000_init启动过程.md  000_001_init进程.md  000_002_000_SystemServer启动过程.md  000_002_SystemServer.md  000_003_Launcher启动流程.md  000_a_fork进程.md  001_000_Zygote启动过程.md  001_Zygote.md  001_系统服务相关.md  002_Android系统启动流程.md  003_Android系统服务.md  004_Launcher启动过程.md  005_应用程序进程启动过程.md  006_根Activity启动过程.md  007_AMS.md  README.md
Gradle/: 001_Gradle学习笔记.md  002_buildTypes & BuildConfig.md  002_buildTypes.md  003_productFlavors.md  004_ext.md  005_Gradle之module间依赖版本同步.md  006_implementation&api.md  007_实现一个自动push的task.md  README.md  (+2 more)
NDK/code/NDKApplication/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
NDK/code/NDKApplication/app/src/main/cpp/base/: base.h
NDK/code/NDKApplication/app/src/main/cpp/jni/: jni_access_field.cpp  jni_basic_type.cpp  jni_dynamic_load.cpp  jni_reference_type.cpp  jni_string.cpp
NDK/code/NDKApplication/app/src/main/cpp/people/: People.cpp  People.h
(+1588 files in other folders)
